# splitposter

./: .gitignore  README.md  env.example  pyproject.toml  splitposter.py
src/splitposter/: __init__.py
